[project]
name = "sku-visual-agent-platform"
version = "0.1.0"
description = "SKU visual production platform for ecommerce image generation."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["output", "assets/uploads", "assets/docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
